Step 4-5: ネイティブを jar に同梱（installNatives / natives.list）、Spring Boot の実行可能 jar に対応